# haskell_llm_benchmark_new

./: .bash_history  .envrc.sample  .gitignore  CLAUDE.md  README.md  flake.nix  glm_final_charts.py  requirements.txt
aider/: models.py
aider/resources/: model-settings.yml
benchmark/: Dockerfile  benchmark.py  summarize_benchmark.py
benchmark-result/report-2025-04-04-16-15-31/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-05-17-30-51/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-10-14-40-40/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-14-11-09-26/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-14-15-50-50/: summary_table.csv
benchmark-result/report-2025-04-14-15-52-48/: summary_table.md
benchmark-result/report-2025-04-15-10-32-59/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-16-23-06-11/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-16-23-09-58/: summary_table.md
benchmark-result/report-2025-04-16-23-18-34/: summary_table.csv
benchmark-result/report-2025-05-06-22-59-18/: summary_table.csv  summary_table.md
benchmark-result/report-2025-05-21-17-06-03/: summary_table.csv  summary_table.md
benchmark-result/report-2025-05-22-13-09-10/: summary_table.csv  summary_table.md
benchmark-result/report-2025-05-28-23-30-12/: summary_table.csv  summary_table.md
benchmark-result/report-2025-06-11-11-22-52/: summary_table.csv  summary_table.md
benchmark-result/report-2025-07-10-16-33-52/: summary_table.csv  summary_table.md
benchmark-result/report-2025-07-12-16-02-51/: summary_table.csv  summary_table.md
benchmark-result/report-2025-07-23-13-12-26/: summary_table.csv  summary_table.md
benchmark-result/report-2025-07-31-12-06-14/: summary_table.csv  summary_table.md
benchmark-result/report-2025-08-08-08-28-45/: summary_table.csv  summary_table.md
benchmark-result/report-2025-08-08-10-31-26/: summary_table.csv  summary_table.md
benchmark-result/report-2025-08-21-17-39-53/: summary_table.csv  summary_table.md
benchmark-result/report-2025-08-28-15-40-49/: summary_table.csv  summary_table.md
benchmark-result/report-2025-09-06-15-49-23/: summary_table.csv  summary_table.md
benchmark-result/report-2025-09-29-23-50-14/: summary_table.csv  summary_table.md
benchmark-result/report-2025-09-29-23-50-54/: summary_table.csv  summary_table.md
benchmark-result/report-2025-11-09-04-27-40/: summary_table.csv  summary_table.md
tmp.benchmarks/2025-04-02-22-59-29--o1-full-run-final/haskell/exercises/practice/dominoes/: package.yaml
tmp.benchmarks/2025-04-02-22-59-29--o1-full-run-final/haskell/exercises/practice/grade-school/: package.yaml
tmp.benchmarks/2025-04-02-22-59-29--o1-full-run-final/haskell/exercises/practice/house/: package.yaml
tmp.benchmarks/2025-04-02-22-59-29--o1-full-run-final/haskell/exercises/practice/lens-person/: package.yaml
tmp.benchmarks/2025-04-02-22-59-29--o1-full-run-final/haskell/exercises/practice/nth-prime/: package.yaml
tmp.benchmarks/2025-04-02-22-59-29--o1-full-run-final/haskell/exercises/practice/pov/: package.yaml
tmp.benchmarks/2025-04-02-23-07-00--o3-mini-full-run-final/haskell/exercises/practice/robot-name/: robot-name.cabal
tmp.benchmarks/2025-04-02-23-07-00--o3-mini-full-run-final/haskell/exercises/practice/robot-name/src/: Robot.hs
tmp.benchmarks/2025-04-05-17-07-59--deepseek-chat-v3-0324-full-run-final/haskell/exercises/practice/acronym/: acronym.cabal
tmp.benchmarks/2025-04-05-17-07-59--deepseek-chat-v3-0324-full-run-final/haskell/exercises/practice/acronym/src/: Acronym.hs
tmp.benchmarks/2025-04-14-15-42-48--gpt-4.1-full-run-final/haskell/exercises/practice/forth/: forth.cabal
tmp.benchmarks/2025-04-14-15-42-48--gpt-4.1-full-run-final/haskell/exercises/practice/forth/src/: Forth.hs
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/bank-account/: bank-account.cabal  package.yaml
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/bank-account/src/: BankAccount.hs
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/robot-name/: package.yaml  robot-name.cabal
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/robot-name/src/: Robot.hs
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/sgf-parsing/: package.yaml  sgf-parsing.cabal
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/sgf-parsing/src/: Sgf.hs
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/simple-cipher/: simple-cipher.cabal
tmp.benchmarks/2025-04-16-22-30-22--o3-full-run-final/haskell/exercises/practice/simple-cipher/src/: Cipher.hs
tmp.benchmarks/2025-04-16-22-43-43--o4-mini-full-run-final/haskell/exercises/practice/parallel-letter-frequency/: package.yaml  parallel-letter-frequency.cabal
tmp.benchmarks/2025-04-16-22-43-43--o4-mini-full-run-final/haskell/exercises/practice/parallel-letter-frequency/src/: Frequency.hs
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/grade-school/: grade-school.cabal  package.yaml
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/grade-school/src/: School.hs
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/robot-name/: robot-name.cabal
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/robot-name/src/: Robot.hs
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/sgf-parsing/: sgf-parsing.cabal
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/sgf-parsing/src/: Sgf.hs
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/simple-cipher/: package.yaml  simple-cipher.cabal
tmp.benchmarks/2025-04-16-22-57-05--o3-high-full-run-final/haskell/exercises/practice/simple-cipher/src/: Cipher.hs
(+15120 files in other folders)
