cabal-version:      2.4
name:               acronym
version:            1.7.0.11

library
  exposed-modules:  Acronym
  hs-source-dirs:   src
  build-depends:    base >=4.14 && <4.18
                  , text >=1.2 && <1.3
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  build-depends:    base
                  , acronym
                  , hspec
  default-language: Haskell2010
