cabal-version:      2.2
name:               forth
version:            1.7.1.13
build-type:         Simple

library
  exposed-modules:     Forth
  hs-source-dirs:      src
  build-depends:       base
                     , text
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base
                     , forth
                     , hspec
  default-language:    Haskell2010
