cabal-version: 2.4
name: robot-name
version: 0.1.0.4
synopsis: Robot factory settings exercise
description: Manage robot names ensuring uniqueness.
license: BSD-3-Clause
author: Exercism Contributors
maintainer: example@example.com
category: Education
build-type: Simple
extra-source-files:
  README.md

library
  exposed-modules: Robot
  hs-source-dirs: src
  build-depends:
      base >=4.14 && <5
    , mtl
    , containers
    , random
  default-language: Haskell2010
  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test
  build-depends:
      base >=4.14 && <5
    , robot-name
    , hspec
    , mtl
    , containers
    , random
  default-language: Haskell2010
