cabal-version:       >=1.10
name:                sgf-parsing
version:             1.2.0.5
synopsis:            Simple SGF (Smart Game Format) parser
license:             MIT
build-type:          Simple

library
  exposed-modules:     Sgf
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base       >=4.12 && <5,
      containers >=0.6,
      text       >=1.2,
      parsec     >=3.1

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base         >=4.12 && <5,
      sgf-parsing,
      hspec        >=2.7,
      containers   >=0.6,
      text         >=1.2,
      parsec       >=3.1
