cabal-version:  1.10
name:           simple-cipher
version:        1.2.0.5
build-type:     Simple

library
  exposed-modules:     Cipher
  hs-source-dirs:      src
  build-depends:       base    >= 4.7  && < 5
                     , random  >= 1.1  && < 2
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base          >= 4.7 && < 5
                     , simple-cipher
                     , hspec         >= 2   && < 3
  default-language:    Haskell2010
