cabal-version:       >=1.10
name:                parallel-letter-frequency
version:             0.1.0.4
build-type:          Simple

library
  exposed-modules:     Frequency
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       containers,
                       text,
                       parallel,
                       deepseq
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >=4.7 && <5,
                       parallel-letter-frequency,
                       hspec
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  hs-source-dirs:      bench
  build-depends:       base >=4.7 && <5,
                       parallel-letter-frequency,
                       criterion
  default-language:    Haskell2010
