cabal-version:       >=1.10
name:                grade-school
version:             1.0.0.4
build-type:          Simple

library
  exposed-modules:   School
  hs-source-dirs:    src
  ghc-options:       -Wall
  default-language:  Haskell2010
  build-depends:
    base       >=4.7 && <5,
    containers                 -- 追加

test-suite test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Tests.hs
  default-language:  Haskell2010
  build-depends:
    base         >=4.7 && <5,
    grade-school,
    hspec,
    containers                     -- 追加（実際には不要かもしれませんが安全のため）
