cabal-version: 2.4
name:           sgf-parsing
version:        1.2.0.5
synopsis:       A very small SGF (Smart‑Game‑Format) parser
description:    Parses SGF strings into an in‑memory tree representation.
category:       Games
author:         Exercism Contributors
maintainer:     exercism@localhost
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    package.yaml

library
  exposed-modules:     Sgf
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base       >= 4.7  && < 5
    , containers >= 0.5  && < 0.7
    , text       >= 1.2  && < 2.1
    , parsec     >= 3.1  && < 3.2

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:
      base         >= 4.7  && < 5
    , sgf-parsing
    , hspec        >= 2.7  && < 3
