cabal-version: 2.2
name: simple-cipher
version: 1.2.0.5
build-type: Simple
license: BSD-3-Clause
synopsis: Caesar / substitution cipher exercise
category: Education
author: Exercism
maintainer: example@example.com

library
  exposed-modules: Cipher
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base    >= 4.14 && < 5
    , random  >= 1.2   && < 2

test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base          >= 4.14 && < 5
    , random        >= 1.2  && < 2
    , hspec         >= 2.0
    , simple-cipher
